# nba_functional_analysis

./: .gitignore  FunctionalDataAnalysis.ipynb  HSGPFunctional.html  HSGPFunctional.ipynb  PosteriorAnalysis.qmd  README.md  advancement.html  advancement.ipynb  advancement.qmd  app.py  data_utils.py  debug_main.py  injury_causal.r  injury_posterior_export.py  latent_space_export.py  main.py  model_export.py  models.py  parallel_main.py  peak_distribution_plot.py  pyproject.toml  scrape_data.py
.devcontainer/: Dockerfile  Dockerfile.R  devcontainer.json  docker-compose.yml
data/: data_utils.py  injury_data.csv  injury_player_cleaned.csv  nba_advanced_stats_1997-2026.csv  nba_totals_stats_1997-2026.csv  player_advanced_totals_cleaned.csv  player_info.csv  validation_player_data.csv
data_analysis/: data_cleaning.r  latent_space_analysis.r  model_diagnostics.r
data_causal/: injury_causal.r  injury_data_cleaning.r  merge_injury_player.r
model/: HMCMetrics.py  MultiHMCGibbs.py  hsgp.py  inference_utils.py  model_utils.py  models.py
model_output/: exponential_cp_c.pkl  exponential_cp_f.pkl  exponential_cp_g.pkl  exponential_cp_normalize.pkl  fixed_latent_convex_nba_tvrflvm_no_init_games_poisson_minutes_svi.pkl  fixed_latent_convex_nba_tvrflvm_svi.pkl  fixed_latent_convex_nba_tvrflvm_svi_poisson_minutes.pkl  fixed_latent_convex_nba_tvrflvm_svi_poisson_minutes_C.pkl  fixed_latent_convex_nba_tvrflvm_svi_poisson_minutes_F.pkl  fixed_latent_convex_nba_tvrflvm_svi_poisson_minutes_G.pkl  fixed_latent_convex_nba_tvrflvm_svi_poisson_minutes_normalize.pkl  latent_variable.pkl  (+4 more)
(+27 files in other folders)
