[tool.poetry]
name = "nba-functional-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "nba_functional_analysis"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pymc = "^5.9.0"
numpyro = "^0.13.2"
arviz = "^0.16.1"
ipykernel = "^6.25.2"
scikit-learn = "^1.3.1"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
